[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "substrate-subxt"
version = "0.11.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
client = ["substrate-subxt-client"]

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive", "full"] }
substrate-subxt-client = { version = "0.3.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.11.0", path = "proc-macro" }
hex = "0.4.2"
advanca-node-primitives = { rev = "7d01af90ac821c61d63cacb54c6b1c32777bae2a", git = "https://github.com/advanca/advanca-node.git" }

[dependencies.frame-metadata]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '11.0.0-rc5'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-version]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.7.1"
substrate-subxt-client = { version = "0.3.0", path = "client" }
tempdir = "0.3.7"
test-node = { path = "test-node" }
wabt = "0.10.0"

[dev-dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dev-dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'
