[package]
name = "test-node"
version = "2.0.0-rc5"
authors = ["Anonymous"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.5"
log = "0.4.11"
structopt = "0.3.15"
parking_lot = "0.11.0"

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '2.0.0-rc5'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5+2'
version = '0.8.0-rc5'

[dependencies.test-node-runtime]
git = 'https://github.com/advanca/advanca-node.git'
package = 'advanca-runtime'
version = '0.3.0'
rev = '483b4d60fae249f9b02becfd7e9a683aeabdca7a'

[build-dependencies]
substrate-build-script-utils = "2.0.0-rc5"
